--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ textarea:focus {
 #searchbox {
   position: fixed;
   right: 0;
-  top: 24px;
+  top: -50px;
   width: 500px;
   pointer-events: none;
   z-index: 50;
@@ -111,12 +111,56 @@ textarea:focus {
 }
 /* Navigation */
 
+.header{
+  background: #ffd52c;
+  width: 100%;
+  height: 60px;
+}
+
+.headerr{
+  background:#940b34;
+  width: 100%;
+  height: 30px;
+}
+
+#eee {
+  height: 35px;
+  background: #940b34;
+  width: 100%;
+  margin: 0;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 16px 0 0;
+  box-sizing: border-box;
+  z-index: 100;
+}
+
+#lorem{
+  text-align: center;
+  line-height: 100%;
+  margin-top: 0px;
+  padding-top: 2%;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  opacity: 70%;
+}
+
+#loremm{
+  text-align: center;
+  line-height: 100%;
+  margin-top: 0px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  vertical-align: middle;
+  color: white;
+  padding-top: 10px;
+}
+
 nav {
   height: 72px;
   background: #202125;
   width: 100%;
   margin: 0;
-  position: fixed;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
   display: flex;
@@ -163,7 +207,7 @@ nav ul {
 
 #logo-img img {
   height: 55px;
-  margin-left: 50%;
+  margin-left: 11%;
 }
 
 #logo-img:hover {
@@ -204,6 +248,7 @@ nav ul {
   text-align: center;
   opacity:0;
   pointer-events:none;
+  margin-top: 170px;
 }
 
 #slideout-menu ul {
