--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
 
 a {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 a:hover {
@@ -158,7 +158,7 @@ textarea:focus {
 
 nav {
   height: 72px;
-  background: #202125;
+  background: #ffffff;
   width: 100%;
   margin: 0;
   font-family: "Roboto Condensed", sans-serif;
@@ -172,7 +172,7 @@ nav {
 
 nav a {
   padding: 0 32px;
-  color: #eee;
+  color: rgb(17, 17, 17);
   transition: 0.4s;
 }
 
@@ -191,13 +191,13 @@ nav ul {
 }
 
 .active {
-  color: #ff0000;
+  color:rgb(17, 17, 17);
 }
 
 #logo-img {
   display: flex;
   height: 100%;
-  background: #202125;
+  background: rgb(255, 255, 255);
   padding: 0 32px;
   align-items: center;
   color: white;
@@ -206,8 +206,8 @@ nav ul {
 }
 
 #logo-img img {
-  height: 55px;
-  margin-left: 11%;
+  height: 60px;
+  padding-top: 5px;
 }
 
 #logo-img:hover {
@@ -265,7 +265,7 @@ nav ul {
 #slideout-menu a {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 #slideout-menu input {
@@ -371,6 +371,7 @@ img{
   font-weight: bold;
   cursor: pointer;
   background: #dadada;
+  color: black;
 }
 
 .btn-readmore:hover {
@@ -651,4 +652,13 @@ footer #social-media-footer ul li:hover a .fa-github {
   main {
     width: 85%;
   }
+
+  .fa,
+.fas {
+ font-weight:900;
+ color: black;
+}
+
+#call{
+color: white;
 }
